instructions.Instructions.scala.error
Erreur de compilation :
Instructions:7: error: value OR is not a member of Boolean
  else if(i%3 == 0 OR i == 10){
                   ^