instructions.Instructions.scala.code
for(i <- 0 to 10){
  if(i == 0){
    
    baisseBrosse();
    
  }
	else if(i%3 == 0 OR i == 10){
    
    droite()
    
    if(i == 10){
     	avance()
    }
    
  }

  else{
  	avance()
  }
}